--- a/XPSRenominator/Views/MainWindow.xaml
+++ b/XPSRenominator/Views/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:controls="clr-namespace:XPSRenominator.Controls"
         mc:Ignorable="d"
         Drop="Window_Drop" AllowDrop="True"
-        Title="XPS Renominator 3.1" Height="900" Width="850">
+        Title="XPS Renominator 3.2" Height="900" Width="850">
     <Window.Resources>
         <Style TargetType="Border">
             <Setter Property="BorderBrush" Value="Blue"/>
@@ -115,7 +115,6 @@
                             <RowDefinition/>
                             <RowDefinition/>
                             <RowDefinition/>
-                            <RowDefinition/>
                         </Grid.RowDefinitions>
                         <TextBlock Grid.Row="0" Grid.Column="0" TextAlignment="Right" Margin="0,0,5,0">Name Matches</TextBlock>
                         <TextBlock Grid.Row="1" Grid.Column="0" TextAlignment="Right" Margin="0,0,5,0">Result</TextBlock>
@@ -127,27 +126,33 @@
                             </TextBox.ToolTip>
                         </TextBox>
                         
-                        <CheckBox Name="OnlySelected"  Grid.Row="2" Grid.Column="0" VerticalAlignment="Center"
-                                  HorizontalAlignment="Center" Checked="Regex_Changed" Unchecked="Regex_Changed" Content="Selected">
-                            <CheckBox.ToolTip>
-                                Rename only selected bones
-                            </CheckBox.ToolTip>
-                        </CheckBox>
+                        <StackPanel Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center" >
+                            <CheckBox Name="OnlySelected" Checked="Regex_Changed" Unchecked="Regex_Changed" Content="Selected">
+                                <CheckBox.ToolTip>
+                                    Rename only selected bones
+                                </CheckBox.ToolTip>
+                            </CheckBox>
                         
-                        <CheckBox Name="Children"  Grid.Row="3" Grid.Column="0" VerticalAlignment="Center"
-                                  HorizontalAlignment="Center" Checked="Regex_Changed" Unchecked="Regex_Changed" Content="Children">
-                            <CheckBox.ToolTip>
-                                Rename selected bones' children
-                            </CheckBox.ToolTip>
-                        </CheckBox>
+                            <CheckBox Name="Children" Checked="Regex_Changed" Unchecked="Regex_Changed" Content="Children">
+                                <CheckBox.ToolTip>
+                                    Rename selected bones' children
+                                </CheckBox.ToolTip>
+                            </CheckBox>
 
-                        <Border Grid.Row="2" Grid.Column="1" Grid.RowSpan="2" Margin="5" BorderBrush="Green">
+                            <CheckBox Name="RenameMeshes" Checked="Regex_Changed" Unchecked="Regex_Changed" Content="Meshes">
+                                <CheckBox.ToolTip>
+                                    Rename selected bones' children
+                                </CheckBox.ToolTip>
+                            </CheckBox>
+                        </StackPanel>
+
+                        <Border Grid.Row="2" Grid.Column="1" Margin="5" BorderBrush="Green">
                             <Button Click="ApplyRename">Apply</Button>
                         </Border>
                     </Grid>
                 </GroupBox>
 
-                <TabControl Grid.ColumnSpan="6" Grid.Column="0" Grid.Row="1" SelectionChanged="BonesOrMeshesTab_Selected">
+                <TabControl Grid.ColumnSpan="6" Grid.Column="0" Grid.Row="1" SelectionChanged="TabSelected">
                     <TabItem Header="Bones">
                         <Grid>
                             <ScrollViewer Name="BoneTreeScroll">
@@ -183,19 +188,7 @@
                             </StackPanel>
                         </Grid>
                     </TabItem>
-                    <TabItem Header="Meshes">
-                        <ScrollViewer>
-                            <Grid x:Name="MeshesGrid">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition/>
-                                    <ColumnDefinition Width="auto"/>
-                                    <ColumnDefinition/>
-                                    <ColumnDefinition/>
-                                </Grid.ColumnDefinitions>
-                            </Grid>
-                        </ScrollViewer>
-                    </TabItem>
-                    <TabItem Header="Textures">
+                    <TabItem Header="Meshes / Materials">
                         <ScrollViewer>
                             <StackPanel x:Name="MaterialsPanel" Orientation="Vertical" AllowDrop="True" MouseMove="MaterialPanel_MouseMove" Background="White" Drop="MaterialPanel_Drop" DragEnter="DragEnterHandler" DragLeave="DragLeaveHandler">
                             </StackPanel>
