--- a/XPSRenominator/Views/MainWindow.xaml
+++ b/XPSRenominator/Views/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:controls="clr-namespace:XPSRenominator.Controls"
         mc:Ignorable="d"
         Drop="Window_Drop" AllowDrop="True"
-        Title="XPS Renominator 3.4.2" Height="900" Width="850">
+        Title="XPS Renominator 3.4.3" Height="900" Width="850">
     <Window.Resources>
         <Style TargetType="Button">
             <Setter Property="Template">
@@ -119,8 +119,8 @@
                         <TextBox Name="RegexOriginal" Grid.Row="0" Grid.Column="1" TextChanged="Regex_Changed"/>
                         <TextBox Name="RegexResult"  Grid.Row="1" Grid.Column="1" TextChanged="Regex_Changed">
                             <TextBox.ToolTip>
-                                Use \n to insert an increasing number.
-                                Use \n\n or \n\n\n to use more padding.
+                                Use \d to insert an increasing number.
+                                Use \d\d or \d\d\d to use more padding.
                             </TextBox.ToolTip>
                         </TextBox>
                         
